--- a/ShoppingProject/ShoppingWebParent/ShoppingBackEnd/src/main/resources/templates/users.html
+++ b/ShoppingProject/ShoppingWebParent/ShoppingBackEnd/src/main/resources/templates/users.html
@@ -7,9 +7,10 @@
 
 <title>Home - Shopping Admin</title>
 
-
 <link rel="stylesheet" type="text/css"
-	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}" />
+<link rel="stylesheet" type="text/css" th:href="@{/style.css}" />
 <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
 <script type="text/javascript"
 	th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
@@ -89,13 +90,22 @@
 			<tbody>
 				<tr th:each="user: ${listUsers}">
 					<td>[[${user.id}]]</td>
-					<td></td>
+					<td><span class="fa-solid fa-image fa-3x icon-yllw" ></span></td>
 					<td>[[${user.email}]]</td>
 					<td>[[${user.firstName}]]</td>
 					<td>[[${user.lastName}]]</td>
 					<td>[[${user.roles}]]</td>
-					<td>[[${user.enabled}]]</td>
-					<td>Edit &nbsp; Delete</td>
+					
+					<td>
+						<a th:if="${user.enabled == true}" class="fa-solid fa-circle-check fa-2x icon-green" href=""></a>
+						<a th:if="${user.enabled == false}" class="fa-solid fa-circle-check fa-2x icon-red" href=""></a>
+					</td>
+					
+					<td>
+						<a class="fa-solid fa-pen-to-square fa-2x icon-green" th:href="@{'/users/edit/' + ${user.id}}" 
+						title="Edit this user"></a> 
+						&nbsp; 
+						<a class="fa-solid fa-trash fa-2x icon-red" href=""></a></td>
 				</tr>
 			</tbody>
 		</table>
