--- a/ShoppingProject/ShoppingWebParent/ShoppingBackEnd/src/main/resources/templates/users.html
+++ b/ShoppingProject/ShoppingWebParent/ShoppingBackEnd/src/main/resources/templates/users.html
@@ -90,7 +90,10 @@
 			<tbody>
 				<tr th:each="user: ${listUsers}">
 					<td>[[${user.id}]]</td>
-					<td><span class="fa-solid fa-image fa-3x icon-yllw" ></span></td>
+					<td>
+						<span th:if="${user.photos == null}" class="fa-solid fa-image fa-3x icon-yllw" ></span>
+						<img th:if="${user.photos != null}" th:src="@{${user.photosImagePath}}" style="width:50px;height:60px;"/>
+					</td>
 					<td>[[${user.email}]]</td>
 					<td>[[${user.firstName}]]</td>
 					<td>[[${user.lastName}]]</td>
