--- a/ShoppingProject/ShoppingWebParent/ShoppingBackEnd/src/main/resources/templates/users.html
+++ b/ShoppingProject/ShoppingWebParent/ShoppingBackEnd/src/main/resources/templates/users.html
@@ -58,13 +58,13 @@
 		</div>
 		<div>
 			<h2>Manage Users</h2>
-			<a th:href="@{/users/new}">Create New User</a>
+			<a th:href="@{/users/new}" class="fa-solid fa-user-plus fa-2x icon-dark mr-2" title="Add User"></a>
 			&nbsp; | &nbsp;
-			<a th:href="@{/users/export/csv}">Export to CSV</a>
+			<a th:href="@{/users/export/csv}" class="fa-solid fa-file-csv fa-2x icon-dark mr-2" title="Download CSV File"></a>
 			&nbsp; | &nbsp;
-			<a th:href="@{/users/export/excel}">Export to Excel</a>
+			<a th:href="@{/users/export/excel}" class="fa-solid fa-file-excel fa-2x icon-dark mr-2" title="Download Excel File"></a>
 			&nbsp; | &nbsp;
-			<a th:href="@{/users/export/pdf}">Export to PDF</a>
+			<a th:href="@{/users/export/pdf}" class="fa-solid fa-file-pdf fa-2x icon-dark mr-2" title="Download PDF File"></a>
 		</div>
 
 		<div th:if="${message != null}"
@@ -79,61 +79,101 @@
 			Filter : &ensp; &nbsp;
 			<input type="search" name="keyword" th:value="${keyword}" class="form-control" required />
 			&nbsp;&nbsp;
-			<input type="submit" value="Search" class="btn btn-primary" />
+			<button type="submit" class="btn btn-primary">
+				<i class="fa-solid fa-magnifying-glass"></i>
+			</button>
 			&nbsp;&nbsp;
-			<input type="button" value="Clear" class="btn btn-secondary" onclick="clearFilter()" />
+			<button type="button" class="btn btn-secondary" onclick="clearFilter()">
+				<i class="fa-solid fa-eraser"></i>
+			</button>
 			</form>
 		</div>
 		
-		<div>
+		<div class="full-details">
 			<table
 				class="table table-bordered table-striped table-hover table-responsive-xl">
 				<thead class="thead-light">
 					<tr>
-						<th th:replace="fragments :: column_link('id', 'User ID')" ></th>						
-						<th>Photos</th>						
-						<th th:replace="fragments :: column_link('email', 'Email')" ></th>						
-						<th th:replace="fragments :: column_link('firstName', 'First Name')" ></th>
-						<th th:replace="fragments :: column_link('lastName', 'Last Name')" ></th>
+						<th class="hideable-column">
+							<th th:replace="fragments :: column_link('id', 'User ID','tag')" ></th>						
+						</th>
+						
+						<th>Photos</th>	
+						<th class="hideable-column">					
+							<th th:replace="fragments :: column_link('email', 'Email', 'tag')" ></th>						
+						</th>
+						<th th:replace="fragments :: column_link('firstName', 'First Name', 'none')" ></th>
+						<th th:replace="fragments :: column_link('lastName', 'Last Name', 'none')" ></th>
+						
 						<th>Roles</th>
-						<th th:replace="fragments :: column_link('enabled', 'Enabled')" ></th>
+						<th th:replace="fragments :: column_link('enabled', 'Enabled', 'none')" ></th>
 						<th></th>
 
 					</tr>
 				</thead>
 				<tbody>
 					<tr th:each="user: ${listUsers}">
-						<td>[[${user.id}]]</td>
-						<td><span th:if="${user.photos == null}"
-							class="fa-solid fa-image fa-3x icon-yllw"></span> <img
-							th:if="${user.photos != null}"
-							th:src="@{${user.photosImagePath}}"
-							style="width: 50px; height: 60px;" /></td>
-						<td>[[${user.email}]]</td>
+						<td class="hideable-column">[[${user.id}]]</td>
+						<td>
+							<span th:if="${user.photos == null}"class="fa-solid fa-image fa-3x icon-yllw"></span> 
+							<img th:if="${user.photos != null}" th:src="@{${user.photosImagePath}}" style="width: 50px; height: 60px;" />
+						</td>
+						<td class="hideable-column">[[${user.email}]]</td>
 						<td>[[${user.firstName}]]</td>
 						<td>[[${user.lastName}]]</td>
 						<td>[[${user.roles}]]</td>
 
-						<td><a th:if="${user.enabled == true}"
-							class="fa-solid fa-circle-check fa-2x icon-green"
-							th:href="@{'/users/' + ${user.id} + '/enabled/false'}"
-							title="Disable this user"></a> <a
-							th:if="${user.enabled == false}"
-							class="fa-solid fa-circle-check fa-2x icon-red"
-							th:href="@{'/users/' + ${user.id} + '/enabled/true'}"
-							title="Enable this user"></a></td>
-
-						<td><a class="fa-solid fa-pen-to-square fa-2x icon-green"
-							th:href="@{'/users/edit/' + ${user.id}}" title="Edit this user"></a>
-							&nbsp; <a class="fa-solid fa-trash fa-2x icon-red link-delete"
-							th:href="@{'/users/delete/' + ${user.id}}" th:userId="${user.id}"
-							title="Delete this user"></a></td>
+						<td>
+							<a th:if="${user.enabled == true}" class="fa-solid fa-circle-check fa-2x icon-green"
+								th:href="@{'/users/' + ${user.id} + '/enabled/false'}"
+								title="Disable this user"></a> 
+							<a th:if="${user.enabled == false}" class="fa-solid fa-circle-check fa-2x icon-red"
+								th:href="@{'/users/' + ${user.id} + '/enabled/true'}"
+								title="Enable this user"></a>
+						<td>
+							<a class="fa-solid fa-pen-to-square fa-2x icon-green"
+								th:href="@{'/users/edit/' + ${user.id}}" title="Edit this user"></a>
+								&nbsp; 
+							<a class="fa-solid fa-trash fa-2x icon-red link-delete"
+								th:href="@{'/users/delete/' + ${user.id}}" th:userId="${user.id}"
+								title="Delete this user"></a>
+						</td>
 
 					</tr>
 				</tbody>
 			</table>
 		</div>
-
+		
+		<div class="less-details">
+			<div th:each="user : ${listUsers}" class="row m-1">
+				<div class="col-4">
+					<span th:if="${user.photos == null}"class="fa-solid fa-image fa-3x icon-yllw"></span> 
+					<img th:if="${user.photos != null}" th:src="@{${user.photosImagePath}}" style="width: 50px; height: 60px;" />
+				</div>
+				<div class="col-8">
+					<div>[[${user.fullName}]]</div>
+					<div>[[${user.roles}]]</div>
+					<div class="mt-2">
+						<a th:if="${user.enabled == true}" class="fa-solid fa-circle-check fa-2x icon-green"
+							th:href="@{'/users/' + ${user.id} + '/enabled/false'}"
+							title="Disable this user"></a> 
+						
+						<a th:if="${user.enabled == false}" class="fa-solid fa-circle-check fa-2x icon-red"
+							th:href="@{'/users/' + ${user.id} + '/enabled/true'}"
+							title="Enable this user"></a>
+						&nbsp; 
+						<a class="fa-solid fa-pen-to-square fa-2x icon-green"
+							th:href="@{'/users/edit/' + ${user.id}}" title="Edit this user"></a>
+							&nbsp; 
+						<a class="fa-solid fa-trash fa-2x icon-red link-delete"
+							th:href="@{'/users/delete/' + ${user.id}}" th:userId="${user.id}"
+							title="Delete this user"></a>
+					</div>
+				</div>
+				<div>&nbsp;</div>
+			</div>			
+		</div>
+		
 		<div class="text-center m-1" th:if="${totalItems > 0}">
 			<span>Showing users # [[${startCount}]] to [[${endCount}]] of
 				[[${totalItems}]] </span>
@@ -144,7 +184,7 @@
 
 		<div th:if="${totalPages > 1}">
 			<nav>
-				<ul class="pagination justify-content-center">
+				<ul class="pagination justify-content-center flex-wrap">
 					<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
 						<a th:replace="fragments :: page_link(1, 'First')" ></a>
 					</li>
