--- a/ShoppingProject/ShoppingWebParent/ShoppingBackEnd/src/main/resources/templates/index.html
+++ b/ShoppingProject/ShoppingWebParent/ShoppingBackEnd/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	 xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport"
@@ -8,19 +9,22 @@
 <title>Home - Shopping Admin</title>
 
 
-<link rel="stylesheet" type="text/css"
-	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}" />
+<link rel="stylesheet" type="text/css" th:href="@{/style.css}" />
 <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script type="text/javascript"
-	th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
+<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
 
 <body>
 	<div class="container-fluid">
 		<div>
+			<form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+				<input type="submit"  />
+			</form>
 			<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #FFFFcc;">
-				<a class="navbar-brand" th:href="@{/}"> <img
-					th:src="@{/images/logo.png}" align="left" />
+				<a class="navbar-brand" th:href="@{/}"> 
+					<img th:src="@{/images/logo.png}" align="left" />
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#topNavbar">
 					<span class="navbar-toggler-icon"></span>
@@ -59,7 +63,17 @@
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" th:href="@{/settings}">Settings</a>
-						</li>					
+						</li>
+						<li>
+							<span class="fas fa-user fa-2x icon-silver"></span>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown"
+								 sec:authentication="principal.fullname"></a>
+							<div class="dropdown-menu" >
+								<a class="dropdown-item" id="logoutLink" href="">Logout</a>
+							</div>
+						</li>			
 					</ul>
 				</div>
 			</nav>
@@ -72,5 +86,13 @@
 		<p>Shopping Control Panel - Copyright &copy; Shopping</p>
 	</div>
 </div>
+<script type="text/javascript">
+	$(document).ready(function() {
+		$("#logoutLink").on("click", function(e) {
+			e.preventDefault();
+			document.logoutForm.submit();
+		});
+	});
+</script>
 </body>
 </html>
