--- a/ShoppingProject/ShoppingWebParent/ShoppingBackEnd/src/main/resources/templates/users.html
+++ b/ShoppingProject/ShoppingWebParent/ShoppingBackEnd/src/main/resources/templates/users.html
@@ -1,60 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-
-<title>Home - Shopping Admin</title>
-
-<link rel="stylesheet" type="text/css"
-	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/style.css}" />
-<script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
-<script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-</head>
+<head th:replace="fragments :: page_head('Users - Shopping Admin')" />
 
 <body>
 	<div class="container-fluid">
-		<div>
-			<nav class="navbar navbar-expand-lg navbar-light"
-				style="background-color: #FFFFcc;">
-				<a class="navbar-brand" th:href="@{/}"> <img
-					th:src="@{/images/logo.png}" align="left" />
-				</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse"
-					data-target="#topNavbar">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="topNavbar">
-					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link" th:href="@{/users}">Users</a>
-						</li>
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/categories}">Categories</a></li>
-						<li class="nav-item"><a class="nav-link" th:href="@{/brands}">Brands</a>
-						</li>
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/products}">Products</a></li>
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/customers}">Customers</a></li>
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/shipping}">Shipping</a></li>
-						<li class="nav-item"><a class="nav-link" th:href="@{/orders}">Orders</a>
-						</li>
-						<li class="nav-item"><a class="nav-link" th:href="@{/report}">Sales
-								Report</a></li>
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/articles}">Articles</a></li>
-						<li class="nav-item"><a class="nav-link" th:href="@{/menus}">Menus</a>
-						</li>
-						<li class="nav-item"><a class="nav-link"
-							th:href="@{/settings}">Settings</a></li>
-					</ul>
-				</div>
-			</nav>
-		</div>
+		<div th:replace="navigation :: menu"></div>
 		<div>
 			<h2>Manage Users</h2>
 			<a th:href="@{/users/new}" class="fa-solid fa-user-plus fa-2x icon-dark mr-2" title="Add User"></a>
@@ -230,9 +180,7 @@
 
 		</div>
 
-		<div class="text-center">
-			<p>Shopping Control Panel - Copyright &copy; Shopping</p>
-		</div>
+		<div th:replace="fragments :: footer"></div>
 	</div>
 	<script type="text/javascript">
 	$(document).ready(function() {
